05Nov11=======================================================================
1. Add CTY2116 changes
04Nov11=======================================================================
1. Add CTY2115 changes
20Oct11=======================================================================
1. Add CTY2113 Changes
02Oct11=======================================================================
1. change 40m bandplan after some input from Martin, ik2rmz
2. Add CTY2112 changes
25Jul11=======================================================================
1. add CTY2109 changes + wpxloc.raw for ST0
2. add CTY2110 changes
24May11=======================================================================
1. Add CTY-2108 prefixes
04Apr11=======================================================================
1. After being poked by Brendan EI6IZ, add outgoing IPV6 connect() handling
29Mar11=======================================================================
1. Add CTY-2106 prefixes
16Mar11=======================================================================
1. Add CTY-2105 prefixes
10Mar11=======================================================================
1. Add CTY-2104 prefixes
01Mar11=======================================================================
1. Add CTY-2103 prefixes
31Oct10=======================================================================
1. Increase PC92 A/D "slug" time to 5 minutes.
29Oct10=======================================================================
1. Allow Jim AD1C to track the changes to the cluster in realtime using the
debug system (set/debug cluster).
27Oct10=======================================================================
1. fix chat problem introduced in the last update
25Oct10=======================================================================
1. Drop PC12s purporting to originate at nodes that do PC9x (suggestion from
Lee VE1CC).
2. Increase default dup age for announces from 5 -> 18 hours.
3. add CTY 2009 cty.dat data.