@@ -123,7 +123,7 @@ Botswana:                 38:  57:  AF:  -22.00:   -24.00:    -2.0:  A2:
 Tonga:                    32:  62:  OC:  -21.22:   175.13:   -13.0:  A3:
     A3;
 Oman:                     21:  39:  AS:   23.60:   -58.55:    -4.0:  A4:
-    A4;
+    A4,=A41NW/ND;
 Bhutan:                   22:  41:  AS:   27.40:   -90.18:    -6.0:  A5:
     A5;
 United Arab Emirates:     21:  39:  AS:   24.00:   -54.00:    -4.0:  A6:
@@ -131,7 +131,7 @@ United Arab Emirates:     21:  39:  AS:   24.00:   -54.00:    -4.0:  A6:
 Qatar:                    21:  39:  AS:   25.25:   -51.13:    -3.0:  A7:
     A7;
 Bahrain:                  21:  39:  AS:   26.03:   -50.53:    -3.0:  A9:
-    A9;
+    A9,=VERSION;
 Pakistan:                 21:  41:  AS:   30.00:   -70.00:    -5.0:  AP:
     6P,6Q,6R,6S,AP,AQ,AR,AS;
 Scarborough Reef:         27:  50:  AS:   15.08:  -117.72:    -8.0:  BS7:
@@ -260,7 +260,7 @@ China:                    24:  44:  AS:   36.00:  -102.00:    -8.0:  BY:
     BZ8R[43],BZ8S[43],BZ8T[43],BZ8U[43],BZ8V[43],BZ8W[43],BZ8X[43],
     BZ9A(24)[43],BZ9B(24)[43],BZ9C(24)[43],BZ9D(24)[43],BZ9E(24)[43],
     BZ9F(24)[43],BZ9S(23)[42],BZ9T(23)[42],BZ9U(23)[42],BZ9V(23)[42],
-    BZ9W(23)[42],BZ9X(23)[42];
+    BZ9W(23)[42],BZ9X(23)[42],=KU1CW/BY1RX;
 Nauru:                    31:  65:  OC:   -0.52:  -166.92:   -12.0:  C2:
     C2;
 Andorra:                  14:  27:  EU:   42.58:    -1.62:    -1.0:  C3:
@@ -288,10 +288,10 @@ Antarctica:               13:  74:  SA:  -90.00:     0.00:     0.0:  CE9:
     LU3Z[73],LU4Z[73],LU5Z[73],LU6Z[73],LU7Z[73],LU8Z[73],LU9Z[73],
     R1AN(29)[69],RI1AN(29)[69],VI0(39)[69],VK0(39)[69],ZL5(30)[71],
     ZM5(30)[71],ZS7(38)[67],=K9PET/KC4,=3Y8XSA(38)[67],=8J1RL(39)[67],
-    =CE9VPM[73],=DP0GVN(38)[67],=DP1POL(38)[67],=KC4AAA(39),=KC4AAC[73],
-    =KC4USB(12),=KC4USV(30)[71],=OR4TN(38)[67],=R1ANP(39)[69],=R1ANR(38)[67],
-    =RI1ANC(29)[70],=RI1ANR(38)[67],=VK0BFG(29)[70],=VP8ADE/B[73],=VP8DLM[73],
-    =ZS6KX/7(38)[67];
+    =CE9VPM[73],=DP0GVN(38)[67],=DP1POL(38)[67],=II0MZ(30)[71],=KC4AAA(39),
+    =KC4AAC[73],=KC4USB(12),=KC4USV(30)[71],=OR4TN(38)[67],=R1ANP(39)[69],
+    =R1ANR(38)[67],=RI1ANC(29)[70],=RI1ANR(38)[67],=VK0BFG(29)[70],
+    =VP8ADE/B[73],=VP8DLM[73],=ZS6KX/7(38)[67];
 Cuba:                     08:  11:  NA:   21.50:    80.00:     5.0:  CM:
     CL,CM,CO,T4;
 Morocco:                  33:  37:  AF:   32.00:     5.00:     0.0:  CN:
@@ -325,7 +325,7 @@ Eritrea:                  37:  48:  AF:   15.00:   -39.00:    -3.0:  E3:
 Palestine:                20:  39:  AS:   31.28:   -34.27:    -2.0:  E4:
     E4;
 North Cook Islands:       32:  62:  OC:  -10.02:   161.08:    10.0:  E5/n:
-    =E51WL;
+    =E51MAN,=E51WL;
 South Cook Islands:       32:  62:  OC:  -21.90:   157.93:    10.0:  E5/s:
     E5;
 Bosnia-Herzegovina:       15:  28:  EU:   44.32:   -17.57:    -1.0:  E7:
@@ -370,7 +370,7 @@ Mayotte:                  39:  53:  AF:  -12.88:   -45.15:    -3.0:  FH:
 St. Barthelemy:           08:  11:  NA:   17.90:    62.83:     4.0:  FJ:
     FJ,=TO3A;
 New Caledonia:            32:  56:  OC:  -21.50:  -165.50:   -11.0:  FK:
-    FK;
+    FK,=TX8NC;
 Chesterfield Islands:     30:  56:  OC:  -19.87:  -158.32:   -11.0:  FK/c:
     =FK8IK/C;
 Martinique:               08:  11:  NA:   14.70:    61.03:     4.0:  FM:
@@ -410,13 +410,13 @@ England:                  14:  27:  EU:   52.77:     1.47:     0.0:  G:
 Isle of Man:              14:  27:  EU:   54.20:     4.53:     0.0:  GD:
     2D,2T,GD,GT,MD,MT,=GB5TD;
 Northern Ireland:         14:  27:  EU:   54.73:     6.68:     0.0:  GI:
-    2I,2N,GI,GN,MI,MN,=GB0SPD,=GB1SPD,=GB2SPD,=GB5SPD;
+    2I,2N,GI,GN,MI,MN,=GB0SPD,=GB1SPD,=GB2AD,=GB2SPD,=GB5SPD;
 Jersey:                   14:  27:  EU:   49.22:     2.18:     0.0:  GJ:
     2H,2J,GH,GJ,MH,MJ;
 Scotland:                 14:  27:  EU:   56.82:     4.18:     0.0:  GM:
-    2A,2M,2S,GA,GM,GS,MA,MM,MS,=GB0SSB,=GB1KLD,=GB1OL,=GB2CHC,=GB2GNL,=GB2LBN,
-    =GB2LT,=GB2MOF,=GB2OWM,=GB2SWF,=GB3SWF,=GB4SWF,=GB5CC,=GB80GD,=GM6WRW/P,
-    =MM0YHB/P;
+    2A,2M,2S,GA,GM,GS,MA,MM,MS,=GB0SA,=GB0SSB,=GB1KLD,=GB1OL,=GB2CHC,=GB2GNL,
+    =GB2LBN,=GB2LT,=GB2MOF,=GB2OWM,=GB2SWF,=GB3SWF,=GB4SWF,=GB5CC,=GB80GD,
+    =GM6WRW/P,=MM0YHB/P;
 Shetland and Fair Isle:   14:  27:  EU:   60.50:     1.50:     0.0:  *GM/s:
     2Z,GZ,MZ,=2M0ZET,=2M1ANT,=2M1ASQ,=2M1ODL,=G0FBJ,=GB0HFC,=GB0OS,=GB2ELH,
     =GB2ZET,=GB4SI,=GM0CXQ,=GM0CYJ,=GM0DJI,=GM0EKM,=GM0ILB,=GM0JDB,=GM0MZD,
@@ -431,9 +431,9 @@ Shetland and Fair Isle:   14:  27:  EU:   60.50:     1.50:     0.0:  *GM/s:
 Guernsey:                 14:  27:  EU:   49.45:     2.58:     0.0:  GU:
     2P,2U,GP,GU,MP,MU;
 Wales:                    14:  27:  EU:   52.28:     3.73:     0.0:  GW:
-    2C,2W,2X,2Y,GC,GW,MC,MW,=GB0HEL,=GB0MPA,=GB0PLB,=GB0SPS,=GB100GGM,=GB2GGM,
-    =GB2LSA,=GB2RSC,=GB2TD,=GB4BPL,=GB4MBC,=GB4MD,=GB4MDI,=GB4RC,=GB4SDD,
-    =GB5FI;
+    2C,2W,2X,2Y,GC,GW,MC,MW,=GB0AD,=GB0HEL,=GB0MPA,=GB0PLB,=GB0RS,=GB100GGM,
+    =GB1CDS,=GB2GGM,=GB2LSA,=GB2RSC,=GB2TD,=GB4BPL,=GB4MBC,=GB4MD,=GB4MDI,
+    =GB4SDD,=GB5FI;
 Solomon Islands:          28:  51:  OC:   -9.00:  -160.00:   -11.0:  H4:
     H4;
 Temotu:                   32:  51:  OC:  -10.72:  -165.80:   -11.0:  H40:
@@ -485,7 +485,7 @@ Djibouti:                 37:  48:  AF:   11.75:   -42.35:    -3.0:  J2:
 Grenada:                  08:  11:  NA:   12.13:    61.68:     4.0:  J3:
     J3;
 Guinea-Bissau:            35:  46:  AF:   12.02:    14.80:     0.0:  J5:
-    J5,=VERSION;
+    J5;
 St. Lucia:                08:  11:  NA:   13.87:    61.00:     4.0:  J6:
     J6;
 Dominica:                 08:  11:  NA:   15.43:    61.35:     4.0:  J7:
@@ -563,36 +563,36 @@ United States:            05:  08:  NA:   37.88:    89.00:     5.0:  K:
     =N8RA(5)[8],=N8RR(5)[8],=N8WXQ(5)[8],=N9CM(5)[8],=N9HDE(4)[7],=N9MM(4)[7],
     =N9NC(5)[8],=NA2U(3)[6],=NA4C(4)[8],=NA4K(4)[8],=NA4W(4)[8],=NB4M(4)[8],
     =NB7V(4)[6],=ND2T(3)[6],=ND4X(4)[8],=ND8N(3)[6],=NE4M(4)[8],=NE8J(5)[8],
-    =NE9Z(4)[7],=NG7A(5)[8],=NH6Z(3)[6],=NJ4I(4)[8],=NM4K(4)[8],=NN4MM(4)[8],
-    =NN4US(4)[8],=NN7A(4)[7],=NO2D(4)[7],=NO9E(5)[8],=NP3D(5)[8],=NQ4U(4)[8],
-    =NR7DX(4)[6],=NS0I(5)[8],=NS2X(4)[8],=NU4B(4)[8],=NV4B(4)[8],=NX1P(3)[6],
-    =NX9T(5)[8],=NY6DX(5)[8],=W0BR(5)[8],=W0IZ(4)[8],=W0JLC(5)[8],=W0PV(5)[8],
-    =W0QQG(5)[8],=W0UCE(5)[8],=W0YK(3)[6],=W0YR(5)[8],=W1ESE(3)[6],
-    =W1NN(4)[8],=W1RH(3)[6],=W1ZD(3)[6],=W2OO(4)[8],=W2VJN(3)[6],=W2VKT(3)[6],
-    =W3CP(3)[6],=W3HDH(4)[8],=W4BCG(4)[8],=W4BCU(4)[8],=W4BK(4)[8],
-    =W4DAN(4)[8],=W4DVG(4)[8],=W4EEH(4)[8],=W4EF(3)[6],=W4GHD(4)[8],
-    =W4GKM(4)[8],=W4HOD(4)[8],=W4HZD(4)[8],=W4JHC(4)[7],=W4JSI(4)[8],
-    =W4KW(4)[8],=W4LC(4)[8],=W4LSC(3)[6],=W4LWW(4)[8],=W4NBS(4)[8],
-    =W4NI(4)[8],=W4NJK(3)[6],=W4NZ(4)[8],=W4PHS(4)[8],=W4PV(4)[8],=W4RK(4)[7],
-    =W4RRE(4)[8],=W4RYW(4)[8],=W4TGB(4)[8],=W4TKI(4)[8],=W4UAL(4)[8],
-    =W4UAT(3)[6],=W4UT(4)[8],=W5DQ(3)[6],=W5JBO(3)[6],=W5JBV(5)[8],
-    =W5JR(5)[8],=W5MPC(5)[8],=W5MX(4)[8],=W5UHQ(4)[8],=W5XB(5)[8],
-    =W6AAN(5)[8],=W6GMT(4)[7],=W6HGF(5)[8],=W6IHG(5)[8],=W6KGP(4)[7],
-    =W6LFB(4)[7],=W6NWS(5)[8],=W6PU(4)[7],=W6SAI(4)[8],=W6UB(4)[8],
-    =W6XR(5)[8],=W7DO(5)[8],=W7HJ(5)[8],=W7IMP(5)[8],=W7IY(5)[8],=W7JI(4)[7],
-    =W7KF(4)[6],=W7KU(4)[7],=W7THY(4)[7],=W8AEF(3)[6],=W8AKS(5)[8],
-    =W8FJ(5)[8],=W8FN(4)[7],=W8HGH(5)[8],=W8IVF(5)[8],=W8JI(5)[8],
-    =W8OHT(5)[8],=W8QZA(3)[6],=W8TK(3)[6],=W8WEJ(5)[8],=W8ZA(5)[8],
-    =W9CF(3)[6],=W9KB(5)[8],=W9LHG(4)[7],=W9NGA(3)[6],=W9UK(5)[8],=W9XQ(4)[7],
-    =WA0KDS(3)[6],=WA0WWW(3)[6],=WA1FCN(4)[8],=WA1PMA(3)[6],=WA1UJU(4)[8],
-    =WA3C(4)[8],=WA4SM(4)[8],=WA4WLI(4)[8],=WA5VGI(3)[6],=WA8OJR(5)[8],
-    =WA8QYJ(5)[8],=WA8WV(5)[8],=WA8ZBT(4)[7],=WB3JFS(3)[6],=WB4YDL(4)[8],
-    =WB4YDY(4)[8],=WB5NMZ(4)[8],=WB8BPU(5)[8],=WB8YYY(5)[8],=WB9KPT(5)[8],
-    =WC2Z(4)[8],=WC7S(4)[7],=WC7V(4)[6],=WD8CQB(5)[8],=WF4U(3)[6],=WF7T(4)[8],
-    =WG7Y(4)[7],=WJ9B(5)[8],=WK5X(5)[8],=WO4O(4)[8],=WP2B(4)[7],=WS6K(4)[8],
-    =WS9M(5)[8],=WT5L(5)[8],=WT9Q(4)[7],=WU9B(3)[6],=WW2Y(4)[7],=WX4MM(4)[8],
-    =WX4TM(4)[8],=WY5I(5)[8],=WY7FD(4)[7],=WY7LL(4)[7],=WY7SS(4)[7],
-    =WZ4F(4)[8];
+    =NE9Z(4)[7],=NG7A(5)[8],=NH6Z(3)[6],=NJ4I(4)[8],=NL7CQ(4)[7],=NM4K(4)[8],
+    =NN4MM(4)[8],=NN4US(4)[8],=NN7A(4)[7],=NO2D(4)[7],=NO9E(5)[8],=NP3D(5)[8],
+    =NQ4U(4)[8],=NR7DX(4)[6],=NS0I(5)[8],=NS2X(4)[8],=NU4B(4)[8],=NV4B(4)[8],
+    =NX1P(3)[6],=NX9T(5)[8],=NY6DX(5)[8],=W0BR(5)[8],=W0IZ(4)[8],=W0JLC(5)[8],
+    =W0PV(5)[8],=W0QQG(5)[8],=W0UCE(5)[8],=W0YK(3)[6],=W0YR(5)[8],
+    =W1ESE(3)[6],=W1NN(4)[8],=W1RH(3)[6],=W1ZD(3)[6],=W2OO(4)[8],=W2VJN(3)[6],
+    =W2VKT(3)[6],=W3CP(3)[6],=W3HDH(4)[8],=W4BCG(4)[8],=W4BCU(4)[8],
+    =W4BK(4)[8],=W4DAN(4)[8],=W4DVG(4)[8],=W4EEH(4)[8],=W4EF(3)[6],
+    =W4GHD(4)[8],=W4GKM(4)[8],=W4HOD(4)[8],=W4HZD(4)[8],=W4JHC(4)[7],
+    =W4JSI(4)[8],=W4KW(4)[8],=W4LC(4)[8],=W4LSC(3)[6],=W4LWW(4)[8],
+    =W4NBS(4)[8],=W4NI(4)[8],=W4NJK(3)[6],=W4NZ(4)[8],=W4PHS(4)[8],
+    =W4PV(4)[8],=W4RK(4)[7],=W4RRE(4)[8],=W4RYW(4)[8],=W4TGB(4)[8],
+    =W4TKI(4)[8],=W4UAL(4)[8],=W4UAT(3)[6],=W4UT(4)[8],=W5DQ(3)[6],
+    =W5JBO(3)[6],=W5JBV(5)[8],=W5JR(5)[8],=W5MPC(5)[8],=W5MX(4)[8],
+    =W5UHQ(4)[8],=W5XB(5)[8],=W6AAN(5)[8],=W6GMT(4)[7],=W6HGF(5)[8],
+    =W6IHG(5)[8],=W6KGP(4)[7],=W6LFB(4)[7],=W6NWS(5)[8],=W6PU(4)[7],
+    =W6SAI(4)[8],=W6UB(4)[8],=W6XR(5)[8],=W7DO(5)[8],=W7HJ(5)[8],=W7IMP(5)[8],
+    =W7IY(5)[8],=W7JI(4)[7],=W7KF(4)[6],=W7KU(4)[7],=W7THY(4)[7],=W8AEF(3)[6],
+    =W8AKS(5)[8],=W8FJ(5)[8],=W8FN(4)[7],=W8HGH(5)[8],=W8IVF(5)[8],
+    =W8JI(5)[8],=W8OHT(5)[8],=W8QZA(3)[6],=W8TK(3)[6],=W8WEJ(5)[8],
+    =W8ZA(5)[8],=W9CF(3)[6],=W9KB(5)[8],=W9LHG(4)[7],=W9NGA(3)[6],=W9UK(5)[8],
+    =W9XQ(4)[7],=WA0KDS(3)[6],=WA0WWW(3)[6],=WA1FCN(4)[8],=WA1PMA(3)[6],
+    =WA1UJU(4)[8],=WA3C(4)[8],=WA4SM(4)[8],=WA4WLI(4)[8],=WA5VGI(3)[6],
+    =WA8OJR(5)[8],=WA8QYJ(5)[8],=WA8WV(5)[8],=WA8ZBT(4)[7],=WB3JFS(3)[6],
+    =WB4YDL(4)[8],=WB4YDY(4)[8],=WB5NMZ(4)[8],=WB8BPU(5)[8],=WB8YYY(5)[8],
+    =WB9KPT(5)[8],=WC2Z(4)[8],=WC7S(4)[7],=WC7V(4)[6],=WD8CQB(5)[8],
+    =WF4U(3)[6],=WF7T(4)[8],=WG7Y(4)[7],=WJ9B(5)[8],=WK5X(5)[8],=WL7OU(4)[7],
+    =WO4O(4)[8],=WP2B(4)[7],=WS6K(4)[8],=WS9M(5)[8],=WT5L(5)[8],=WT9Q(4)[7],
+    =WU9B(3)[6],=WW2Y(4)[7],=WX4MM(4)[8],=WX4TM(4)[8],=WY5I(5)[8],
+    =WY7FD(4)[7],=WY7LL(4)[7],=WY7SS(4)[7],=WZ4F(4)[8];
 Guantanamo Bay:           08:  11:  NA:   20.00:    75.00:     5.0:  KG4:
     KG4;
 Northern Mariana Islands: 27:  64:  OC:   15.18:  -145.72:   -10.0:  KH0:
@@ -729,10 +729,15 @@ Argentina:                13:  14:  SA:  -34.80:    65.92:     3.0:  LU:
     LW4W[16],LW4X[16],LW4Y[16],LW5V[16],LW5W[16],LW5X[16],LW5Y[16],LW6V[16],
     LW6W[16],LW6X[16],LW6Y[16],LW7V[16],LW7W[16],LW7X[16],LW7Y[16],LW8V[16],
     LW8W[16],LW8X[16],LW8Y[16],LW9V[16],LW9W[16],LW9X[16],LW9Y[16],=LU1DZ/D,
-    =LU1YY/XA[16],=LU2AVW/D,=LU2CHP/D,=LU2DJB/J,=LU2DVI/H,=LU2EE/D,=LU2FP/F,
-    =LU2HOD/D,=LU3FV/F,=LU3VAL/V[16],=LU4DBT/XA[16],=LU4ETN/F,=LU4HOD/F,
-    =LU5DEM/W[16],=LU5DGI/W[16],=LU5DX/H,=LU5FZ/F,=LU6EE/XA[16],=LU6FE/H,
-    =LU7FM/F,=LU7JMS/J,=LU8DZE/D,=LU9JMG/J,=LU9XPA/L,=LW2EIY/H,=LW3DKO/D;
+    =LU1EEE/D,=LU1JAO/J,=LU1JHP/J,=LU1JMA/J,=LU1YY/XA[16],=LU2AVW/D,=LU2CHP/D,
+    =LU2DJB/J,=LU2DVI/H,=LU2ED/D,=LU2EDC/D,=LU2EIT/D,=LU2ENG/D,=LU2FP/F,
+    =LU2HEQ/H,=LU2HOD/D,=LU2JCI/J,=LU2JPE/J,=LU3ARE/D,=LU3DK/D,=LU3FV/F,
+    =LU3HAZ/H,=LU3VAL/V[16],=LU4DBT/XA[16],=LU4DLL/D,=LU4EGP/D,=LU4ETN/F,
+    =LU4HOD/F,=LU4JLX/J,=LU4JMO/J,=LU4QQ/Q,=LU5DEM/W[16],=LU5DGI/W[16],
+    =LU5DX/H,=LU5FZ/F,=LU5HFW/H,=LU5JNC/J,=LU5QAG/Q,=LU6EE/XA[16],=LU6ENA/D,
+    =LU6FE/H,=LU6QB/Q,=LU7FM/F,=LU7HCS/H,=LU7JMS/J,=LU8DZE/D,=LU8EAG/D,
+    =LU8HBX/H,=LU9JLV/J,=LU9JMG/J,=LU9XPA/L,=LW1ELI/D,=LW1HBD/H,=LW2EIY/H,
+    =LW3DKO/D,=LW4DCV/D,=LW6HAM/H;
 Luxembourg:               14:  27:  EU:   50.00:    -6.00:    -1.0:  LX:
     LX;
 Lithuania:                15:  29:  EU:   55.45:   -23.63:    -2.0:  LY:
@@ -914,7 +919,7 @@ Kaliningrad:              15:  29:  EU:   54.82:   -21.60:    -2.0:  UA2:
     R2F,R2K,RA2,RC2F,RC2K,RD2F,RD2K,RF2F,RF2K,RG2F,RG2K,RI2F,RI2K,RJ2F,RJ2K,
     RK2F,RK2K,RL2F,RL2K,RM2F,RM2K,RN2F,RN2K,RO2F,RO2K,RP2F,RP2K,RQ2F,RQ2K,
     RR2F,RR2K,RT2F,RT2K,RU2F,RU2K,RV2F,RV2K,RW2F,RW2K,RX2F,RX2K,RY2F,RY2K,
-    RZ2F,RZ2K,U2F,U2K,UA2,UB2,UC2,UD2,UE2,UF2,UG2,UH2,UI2;
+    RZ2F,RZ2K,U2F,U2K,UA2,UB2,UC2,UD2,UE2,UF2,UG2,UH2,UI2,=R2MWO;
 Asiatic Russia:           17:  30:  AS:   67.18:  -104.00:    -7.0:  UA9:
     R0,R8(17)[30],R9,RA0,RA8(17)[30],RA9,RB0,RB8(17)[30],RB9,RC0,RC8(17)[30],
     RC9,RD0,RD8(17)[30],RD9,RE0,RE8(17)[30],RE9,RF0,RF8(17)[30],RF9,RG0,
@@ -1112,17 +1117,17 @@ Canada:                   05:  09:  NA:   44.35:    78.75:     5.0:  VE:
     CI1(1)[2],CI2,CJ2[4],CK2[4],CY1,CY2(2),CZ0(2)[4],CZ1(1)[2],CZ2,VA2[4],
     VB2[4],VC2[4],VD1,VD2(2),VE2[4],VF0(2)[4],VF1(1)[2],VF2,VG2[4],VO1,VO2(2),
     VX2[4],VY0(2)[4],VY1(1)[2],VY2,XJ1,XJ2(2),XK0(2)[4],XK1(1)[2],XK2,XL2[4],
-    XM2[4],XN1,XN2(2),XO0(2)[4],XO1(1)[2],XO2,=VER20111104,=VA2PL(2)[4],
+    XM2[4],XN1,XN2(2),XO0(2)[4],XO1(1)[2],XO2,=VER20111121,=VA2PL(2)[4],
     =VE0MDL(3)[2],=VE2/JA8BMK(2)[4],=VE2AEJ(4)[4],=VE2CSI(2)[4],=VE2DXY(2)[4],
-    =VE2FK[9],=VE2GSO(2)[4],=VE2IDX(2)[4],=VE2III(2)[4],=VE2IM(2)[4],
-    =VE2TKH(2)[4],=VE3ZF/2(2)[4],=VE7MID/VE2(2)[4],=VY0PW(4)[3];
+    =VE2EKA(2)[4],=VE2FK[9],=VE2GSO(2)[4],=VE2IDX(2)[4],=VE2III(2)[4],
+    =VE2IM(2)[4],=VE2TKH(2)[4],=VE3ZF/2(2)[4],=VE7MID/VE2(2)[4],=VY0PW(4)[3];
 Australia:                30:  59:  OC:  -23.70:  -132.33:   -10.0:  VK:
     AX,VH,VI,VJ,VK,VL,VM,VN,VZ,AX4[55],VH4[55],VI4[55],VJ4[55],VK4[55],
     VL4[55],VM4[55],VN4[55],VZ4[55];
 Heard Island:             39:  68:  AF:  -53.08:   -73.50:    -5.0:  VK0H:
     =VK0IR;
 Macquarie Island:         30:  60:  OC:  -54.60:  -158.88:   -10.0:  VK0M:
-    =VK0KEV,=VK0TH;
+    =AX/VK0TH,=VK0KEV,=VK0TH;
 Cocos-Keeling:            29:  54:  OC:  -12.15:   -96.82:    -6.5:  VK9C:
     AX9C,AX9Y,VH9C,VH9Y,VI9C,VI9Y,VJ9C,VJ9Y,VK9C,VK9Y,VL9C,VL9Y,VM9C,VM9Y,
     VN9C,VN9Y,VZ9C,VZ9Y,=VK9AA;
