@@ -294,6 +294,7 @@
   '=9M4SMY' => '289,652',
   '=9M6XX/2' => '288',
   '=9M8DX/2' => '288',
+  '=A41NW/ND' => '3',
   '=AA4DD' => '207',
   '=AA4N' => '207',
   '=AA4YL' => '207',
@@ -319,12 +320,14 @@
   '=AI4DB' => '207',
   '=AJ4A' => '207',
   '=AJ4F' => '207',
+  '=AX/VK0TH' => '191',
   '=BS7H' => '304',
   '=CE9VPM' => '97,397,398,400,401,402,403,404,405,406,407,408,409,410,412,414',
   '=DL0CUX/LV' => '32',
   '=DP0GVN' => '97,397,398,400,401,402,403,404,405,406,407,408,409,410,412,414',
   '=DP1POL' => '97,397,398,400,401,402,403,404,405,406,407,408,409,410,412,414',
   '=DT8A' => '341',
+  '=E51MAN' => '342',
   '=E51WL' => '342',
   '=EA5IIG/6' => '35',
   '=EA5RKL/8' => '36',
@@ -333,18 +336,22 @@
   '=FK8IK/C' => '316',
   '=FO/F6CTL' => '313',
   '=G0FBJ' => '382',
+  '=GB0AD' => '66',
   '=GB0HEL' => '66',
   '=GB0HFC' => '382',
   '=GB0MPA' => '66',
   '=GB0OS' => '382',
   '=GB0PLB' => '66',
+  '=GB0RS' => '66',
+  '=GB0SA' => '64,382',
   '=GB0SPD' => '62',
-  '=GB0SPS' => '66',
   '=GB0SSB' => '64,382',
   '=GB100GGM' => '66',
+  '=GB1CDS' => '66',
   '=GB1KLD' => '64,382',
   '=GB1OL' => '64,382',
   '=GB1SPD' => '62',
+  '=GB2AD' => '62',
   '=GB2CHC' => '64,382',
   '=GB2ELH' => '382',
   '=GB2GGM' => '66',
@@ -364,7 +371,6 @@
   '=GB4MBC' => '66',
   '=GB4MD' => '66',
   '=GB4MDI' => '66',
-  '=GB4RC' => '66',
   '=GB4SDD' => '66',
   '=GB4SI' => '382',
   '=GB4SWF' => '64,382',
@@ -439,6 +445,7 @@
   '=HZ1SBS/J' => '82,384,385',
   '=I1SR' => '341',
   '=II0M' => '84',
+  '=II0MZ' => '97,397,398,400,401,402,403,404,405,406,407,408,409,410,412,414',
   '=IQ0AH' => '84',
   '=IQ0QP' => '84',
   '=IQ0SS' => '84',
@@ -639,6 +646,7 @@
   '=KS7T' => '207',
   '=KT0P' => '207',
   '=KU1CW' => '207',
+  '=KU1CW/BY1RX' => '10,344,345,346',
   '=KU1YL' => '207',
   '=KU4A' => '207',
   '=KU8E' => '207',
@@ -653,33 +661,64 @@
   '=KY5R' => '207',
   '=KZ2V' => '207',
   '=LU1DZ/D' => '117,428,429',
+  '=LU1EEE/D' => '117,428,429',
+  '=LU1JAO/J' => '117,428,429',
+  '=LU1JHP/J' => '117,428,429',
+  '=LU1JMA/J' => '117,428,429',
   '=LU1YY/XA' => '117,428,429',
   '=LU1ZA' => '339',
   '=LU2AVW/D' => '117,428,429',
   '=LU2CHP/D' => '117,428,429',
   '=LU2DJB/J' => '117,428,429',
   '=LU2DVI/H' => '117,428,429',
-  '=LU2EE/D' => '117,428,429',
+  '=LU2ED/D' => '117,428,429',
+  '=LU2EDC/D' => '117,428,429',
+  '=LU2EIT/D' => '117,428,429',
+  '=LU2ENG/D' => '117,428,429',
   '=LU2FP/F' => '117,428,429',
+  '=LU2HEQ/H' => '117,428,429',
   '=LU2HOD/D' => '117,428,429',
+  '=LU2JCI/J' => '117,428,429',
+  '=LU2JPE/J' => '117,428,429',
+  '=LU3ARE/D' => '117,428,429',
+  '=LU3DK/D' => '117,428,429',
   '=LU3FV/F' => '117,428,429',
+  '=LU3HAZ/H' => '117,428,429',
   '=LU3VAL/V' => '117,428,429',
   '=LU4DBT/XA' => '117,428,429',
+  '=LU4DLL/D' => '117,428,429',
+  '=LU4EGP/D' => '117,428,429',
   '=LU4ETN/F' => '117,428,429',
   '=LU4HOD/F' => '117,428,429',
+  '=LU4JLX/J' => '117,428,429',
+  '=LU4JMO/J' => '117,428,429',
+  '=LU4QQ/Q' => '117,428,429',
   '=LU5DEM/W' => '117,428,429',
   '=LU5DGI/W' => '117,428,429',
   '=LU5DX/H' => '117,428,429',
   '=LU5FZ/F' => '117,428,429',
+  '=LU5HFW/H' => '117,428,429',
+  '=LU5JNC/J' => '117,428,429',
+  '=LU5QAG/Q' => '117,428,429',
   '=LU6EE/XA' => '117,428,429',
+  '=LU6ENA/D' => '117,428,429',
   '=LU6FE/H' => '117,428,429',
+  '=LU6QB/Q' => '117,428,429',
   '=LU7FM/F' => '117,428,429',
+  '=LU7HCS/H' => '117,428,429',
   '=LU7JMS/J' => '117,428,429',
   '=LU8DZE/D' => '117,428,429',
+  '=LU8EAG/D' => '117,428,429',
+  '=LU8HBX/H' => '117,428,429',
+  '=LU9JLV/J' => '117,428,429',
   '=LU9JMG/J' => '117,428,429',
   '=LU9XPA/L' => '117,428,429',
+  '=LW1ELI/D' => '117,428,429',
+  '=LW1HBD/H' => '117,428,429',
   '=LW2EIY/H' => '117,428,429',
   '=LW3DKO/D' => '117,428,429',
+  '=LW4DCV/D' => '117,428,429',
+  '=LW6HAM/H' => '117,428,429',
   '=MA1FJM' => '382',
   '=MM0LSM' => '382',
   '=MM0XAU' => '382',
@@ -781,6 +820,7 @@
   '=NH2IF' => '105,419,420',
   '=NH6Z' => '207',
   '=NJ4I' => '207',
+  '=NL7CQ' => '207',
   '=NM4K' => '207',
   '=NN4MM' => '207',
   '=NN4US' => '207',
@@ -801,6 +841,7 @@
   '=OR4TN' => '97,397,398,400,401,402,403,404,405,406,407,408,409,410,412,414',
   '=R1ANP' => '97,397,398,400,401,402,403,404,405,406,407,408,409,410,412,414',
   '=R1ANR' => '97,397,398,400,401,402,403,404,405,406,407,408,409,410,412,414',
+  '=R2MWO' => '171',
   '=RI1ANC' => '97,397,398,400,401,402,403,404,405,406,407,408,409,410,412,414',
   '=RI1ANR' => '97,397,398,400,401,402,403,404,405,406,407,408,409,410,412,414',
   '=ST0R' => '329',
@@ -826,12 +867,14 @@
   '=TX5A' => '314',
   '=TX5C' => '48',
   '=TX7M' => '314',
+  '=TX8NC' => '45,316',
   '=VA2PL' => '187,544,545,546,547,548,549,550,551,552',
   '=VE0MDL' => '187,544,545,546,547,548,549,550,551,552',
   '=VE2/JA8BMK' => '187,544,545,546,547,548,549,550,551,552',
   '=VE2AEJ' => '187,544,545,546,547,548,549,550,551,552',
   '=VE2CSI' => '187,544,545,546,547,548,549,550,551,552',
   '=VE2DXY' => '187,544,545,546,547,548,549,550,551,552',
+  '=VE2EKA' => '187,544,545,546,547,548,549,550,551,552',
   '=VE2FK' => '187,544,545,546,547,548,549,550,551,552',
   '=VE2GSO' => '187,544,545,546,547,548,549,550,551,552',
   '=VE2IDX' => '187,544,545,546,547,548,549,550,551,552',
@@ -840,8 +883,8 @@
   '=VE2TKH' => '187,544,545,546,547,548,549,550,551,552',
   '=VE3ZF/2' => '187,544,545,546,547,548,549,550,551,552',
   '=VE7MID/VE2' => '187,544,545,546,547,548,549,550,551,552',
-  '=VER20111104' => '187,544,545,546,547,548,549,550,551,552',
-  '=VERSION' => '87',
+  '=VER20111121' => '187,544,545,546,547,548,549,550,551,552',
+  '=VERSION' => '7',
   '=VK0BFG' => '97,397,398,400,401,402,403,404,405,406,407,408,409,410,412,414',
   '=VK0IR' => '190',
   '=VK0KEV' => '191',
@@ -983,6 +1026,7 @@
   '=WG7Y' => '207',
   '=WJ9B' => '207',
   '=WK5X' => '207',
+  '=WL7OU' => '207',
   '=WO4O' => '207',
   '=WP2B' => '207',
   '=WS6K' => '207',
