@@ -1,3 +1,6 @@
+29Nov11=======================================================================
+1. fix shutdown() in Msg.pm
+2. Add CTY2117 changes
 05Nov11=======================================================================
 1. Add CTY2116 changes
 04Nov11=======================================================================
